# NetworkDirect

./: .gitignore  CMakeLists.txt  Directory.Build.props  README.md  bbld.bat  bprep.bat  faq.md
src/: CMakeLists.txt  netdirect.sln
src/Logger/: Logger.cpp  Logger.h  Logger.vcxproj.filters  stdafx.h
src/VCToolsVersionUpdate/: VCToolsVersionUpdate.py  VCToolsVersionUpdate.pyproj
src/Winshim/: WinHeap.h  Winshim.cpp  Winshim.h  Winshim.vcxproj  Winshim.vcxproj.filters
src/demeter-win/: CMakeLists.txt
src/demeter-win/examples/: CMakeLists.txt
src/demeter-win/examples/dmping/: CMakeLists.txt  PreLoad.cmake  csv.cpp  csv.h  dmping.cpp  dmping.sln  dmping.vcxproj  pch.cpp  pch.h
src/demeter-win/examples/dmrping/: CMakeLists.txt  Client.cpp  Client.h  Params.cpp  PeerInfo.cpp  Server.cpp  Server.h  dmrping.cpp  pch.h  readme.md
src/demeter-win/examples/dmrpingpong/: CMakeLists.txt  Params.cpp  Utils.h  dmrpingpong.cpp  dmrpingpong.vcxproj.filters  main0.cpp  main1.cpp  ndscope.h  pch.h
src/demeter-win/libraries/: CMakeLists.txt
src/demeter-win/libraries/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
src/demeter-win/libraries/Winshim/: CMakeLists.txt  Winshim.cpp  Winshim.h  Winshim.sln  error_strings.cpp  error_strings.h  stdafx.h
src/demeter-win/libraries/logger/: CMakeLists.txt  Logger.cpp  Logger.h  Logger.vcxproj
src/demeter-win/libraries/ndlist/: ndlist.cpp  ndlist.vcxproj  ndlist.vcxproj.filters
src/demeter-win/libraries/ndutil/: .gitignore  CMakeLists.txt  ndaddr.cpp  ndfrmwrk.cpp  ndprov.cpp  ndspi.h  ndtestutil.cpp  ndtestutil.h  ndutil.h  precomp.h
src/demeter-win/libraries/ndutil/include/: logging.h  ndcommon.h
src/demeter-win/utilities/Winshim/: WinHeap.h  Winshim.vcxproj.filters  error_strings.cpp  error_strings.h
src/demeter-win/utilities/printlog/: ind2.py  printlog.py  printlog.pyproj
src/demeter-win/vs/: vs.sln
src/demeter-win/vs/Winshim/: Winshim.vcxproj  Winshim.vcxproj.filters  stdafx.h
src/demeter-win/vs/dmping/: dmping.vcxproj  dmping.vcxproj.filters
src/demeter-win/vs/dmrping/: .gitignore  dmrping.vcxproj  dmrping.vcxproj.filters
src/demeter-win/vs/dmrpingpong/: dmrpingpong.vcxproj  dmrpingpong.vcxproj.filters
src/demeter-win/vs/logger/: logger.vcxproj  logger.vcxproj.filters  stdafx.h
src/demeter-win/vs/ndutil/: ndutil.vcxproj  ndutil.vcxproj.filters
src/demeter-win/vs/simple/: State.cpp  State.h  client.cpp  client.h  errors.cpp  errors.h  ndscope.h  ndspi.cpp  ndspi.h  params.cpp  params.h  server.cpp  server.h  simple.cpp  simple.vcxproj  simple.vcxproj.filters  work.cpp  work.h
src/demeter-win/vs/utils/: utils.vcxproj  utils.vcxproj.filters
src/demeter/examples/dmping/: Args.cpp  Args.h  csv.cpp  csv.h  dmping.cpp  dmping.vcxproj  dmping.vcxproj.filters  log.json  server.csv  test.csv  test.json
src/demeter/examples/dmrping/: Client.cpp  Client.h  Params.cpp  Params.h  PeerInfo.h  Server.cpp  Server.h  ctxt.h  dmrping.cpp  dmrping.vcxproj  dmrping.vcxproj.filters
src/demeter/examples/dmrpingpong/: Params.cpp  Params.h  Utils.cpp  Utils.h  dmrpingpong.cpp  dmrpingpong.vcxproj  log.json  main1.cpp
src/examples/ndadapterinfo/: ndadapterinfo.cpp  ndadapterinfo.vcxproj
src/examples/ndping/: ndping.cpp  ndping.vcxproj
src/examples/ndpingpong/: ndpingpong.cpp  ndpingpong.vcxproj
src/examples/ndrping/: ndrping.cpp  ndrping.vcxproj
src/examples/ndtestutil/: ndtestutil.cpp  ndtestutil.vcxproj
src/ndlist/: ndlist.cpp  ndlist.vcxproj
src/ndutil/: CMakeLists.txt  ndaddr.cpp  ndfrmwrk.cpp  ndprov.cpp  ndutil.vcxproj  precomp.h
src/printlog/: printlog.py  printlog.pyproj
src/unittests/ndmval/: ndmval.cpp  ndmval.vcxproj
